[tool.poetry]
name = "ctf-architect"
version = "0.1.0a7"
description = "A tool for managing challenges for CTFs."
authors = ["Jus-Codin <70018166+Jus-Codin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11"
]


[tool.poetry.scripts]
ctf-architect = "ctf_architect.cli:app"
chall-architect = "ctf_architect.chall_architect.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
tomlkit = "^0.12.3"
pydantic = "^2.6.1"
rich = "^13.7.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.16"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}



[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
